# colmena

./: .gitignore  ARCHITECT_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DOCS_BRIEF.md  DOGFOOD-STATUS.md  LICENSE  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  release.yml
colmena-cli/: Cargo.toml
colmena-cli/src/: defaults.rs  doctor.rs  hook.rs  install.rs  main.rs  notify.rs  setup.rs  upgrade.rs
colmena-cli/tests/: integration.rs
colmena-core/: Cargo.toml
colmena-core/src/: alerts.rs  audit.rs  auto_elevate.rs  calibrate.rs  config.rs  delegate.rs  elo.rs  findings.rs  firewall.rs  history.rs  lib.rs  library.rs  mission_manifest.rs  models.rs  paths.rs  pattern_scaffold.rs  queue.rs  review.rs  sanitize.rs  selector.rs  templates.rs
colmena-core/src/emitters/: claude_code.rs  mod.rs
colmena-filter/: Cargo.toml
colmena-filter/src/: config.rs  lib.rs  pipeline.rs  stats.rs
colmena-filter/src/filters/: ansi.rs  dedup.rs  mod.rs  prompt_injection.rs  stderr_only.rs  truncate.rs
colmena-filter/tests/: prompt_injection_test.rs
colmena-mcp/: Cargo.toml
colmena-mcp/src/: main.rs  rate_limit.rs
config/: filter-config.yaml  review-config.yaml  runtime-delegations.json  trust-firewall.yaml
config/manifests/: docs-regeneration-2026-05.mission.yaml
config/missions/2026-03-30-security-audit-of-payments/: mission.yaml
config/missions/2026-03-30-security-audit-of-payments/agents/auditor/: CLAUDE.md
config/missions/2026-03-30-security-audit-of-payments/agents/pentester/: CLAUDE.md
config/missions/2026-03-30-security-audit-of-payments/agents/researcher/: CLAUDE.md
config/missions/2026-03-30-security-audit-of-payments/agents/security_architect/: CLAUDE.md
config/queue/pending/: 1774810825355-tu_integration.json  1774810825357-tu_integration.json  1774810825361-tu_integration.json  1774811904726-tu_integration.json  1774811904729-tu_integration.json  1774811904730-tu_integration.json  1774811945311-tu_integration.json  1774811945313-tu_integration.json  1774811945317-tu_integration.json  1774812062609-tu_integration.json  1774812062615-tu_integration.json  1774812062623-tu_integration.json  1774812089327-tu_integration.json  1774812089330-tu_integration.json  1774812120820-tu_integration.json  1774812120822-tu_integration.json  1774812120828-tu_integration.json  1774812285338-tu_integration.json  1774812285342-tu_integration.json  1774812363873-tu_integration.json  1774812363875-tu_integration.json  1774812363884-tu_integration.json  1774812435252-tu_integration.json  1774812435254-tu_integration.json  1774812508247-tu_integration.json  1774812508250-tu_integration.json  1774812602338-tu_integration.json  1774812602345-tu_integration.json  1774812602353-tu_integration.json  1774812666891-tu_integration.json  1774812666894-tu_integration.json  1774812737437-tu_integration.json  1774812737443-tu_integration.json  1774812737448-tu_integration.json  1774812737453-tu_integration.json  1774812761874-tu_integration.json  1774812761877-tu_integration.json  1774812761890-tu_integration.json  1774812761898-tu_integration.json  1774812795220-tu_integration.json  (+372 more)
docs/: backlog.yaml  dark-corners-m1.md  dark-corners.md  guide.md  install-mode-b.md  presentation.html
docs/architect/M7-15-mission-manifest/: ARCHITECT_PLAN.md  SECURITY-ARCHITECT.md  SRE.md  SW-ARCHITECT.md
docs/dev/: architecture.md  contributing.md  internals.md
docs/plans/: 2026-03-29-full-roadmap.md  2026-03-29-m0-hardening.md  2026-03-30-m2-peer-review-elo.md  2026-03-30-updated-roadmap.md
docs/security/: RRA_Analysis_colmena.csv  RRA_Summary_JIRA_colmena.md
docs/specs/: 2026-03-29-hivemind-design.md  2026-03-30-m2-peer-review-elo-design.md
docs/superpowers/specs/: 2026-04-02-colmena-setup-design.md  2026-04-02-intelligent-role-creation-design.md  2026-04-02-mentor-prompt-refinement-design.md  2026-04-02-mission-bridge-design.md  2026-04-13-enforced-peer-review-design.md  2026-04-14-m7-generic-roles-patterns-design.md  2026-04-14-m71-mission-spawn-gate-design.md  2026-04-14-m72-mission-sizing-suggest-design.md
docs/user/: getting-started.md  use-cases.md
examples/manifests/: bbp-pentest.mission.yaml  colmena-refactor.mission.yaml  incident-response.mission.yaml
tests/fixtures/missions/: 2026-04-20-m73-docs-overhaul.yaml  invalid-nonexistent-role.yaml  peer-2-roles.yaml
