[workspace]
members = ["colmena-core", "colmena-cli", "colmena-mcp", "colmena-filter"]
resolver = "2"

[workspace.package]
version = "0.12.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/4rth4S/colmena"
homepage = "https://github.com/4rth4S/colmena"
authors = ["Colmena Contributors"]
keywords = ["claude", "agents", "mcp", "security", "orchestration"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
regex = "1"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
libc = "0.2"

[profile.release]
opt-level = 2
strip = true
lto = "thin"
