[package]
name = "colmena"
version = "0.14.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "CLI binary for Colmena — hook handler, queue, delegate, install"

[[bin]]
name = "colmena"
path = "src/main.rs"

[dependencies]
colmena-core = { path = "../colmena-core", version = "0.14.0" }
colmena-filter = { path = "../colmena-filter", version = "0.14.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
