[package]
name = "colmena"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "CLI binary for Colmena — hook handler, queue, delegate, install"

[[bin]]
name = "colmena"
path = "src/main.rs"

[dependencies]
colmena-core = { path = "../colmena-core", version = "0.14.3" }
colmena-filter = { path = "../colmena-filter", version = "0.14.3" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
clap = { version = "4.6", features = ["derive"] }
ureq = { version = "3", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
