[package]
name = "colmena-core"
version.workspace = true
edition.workspace = true
description = "Core library for Colmena — trust firewall, library, bus, ELO"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
regex.workspace = true
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
rand.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
