[package]
name = "colmena-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Core library for Colmena — trust firewall, library, bus, ELO"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
regex.workspace = true
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
rand.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
