[package]
name = "colmena-filter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Output filtering pipeline for Colmena PostToolUse hook"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
