[package]
name = "colmena-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for Colmena — exposes colmena tools to Claude Code"

[[bin]]
name = "colmena-mcp"
path = "src/main.rs"

[dependencies]
colmena-core = { path = "../colmena-core" }
colmena-filter = { path = "../colmena-filter" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
