[package]
name = "colmena-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "MCP server for Colmena — exposes colmena tools to Claude Code"

[[bin]]
name = "colmena-mcp"
path = "src/main.rs"

[dependencies]
colmena-core = { path = "../colmena-core", version = "0.14.0" }
colmena-filter = { path = "../colmena-filter", version = "0.14.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
rand.workspace = true
rmcp = { version = "1.6", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
